--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1538,7 +1538,7 @@ h3.time {
 }
 /*Modules Table*/
 .moduleList .btn.action {
-  width: 88px;
+  width: 110px;
 }
 .dateInfo {
   padding-top: 4px;
@@ -1582,7 +1582,7 @@ body {
 .page-sidebar .page-sidebar-wrapper > ul > li > a .arrow,
 .page-sidebar .page-sidebar-wrapper > ul > li > a .arrow.open:before {
   color: #ffffff !important;
-  font-size: 15px;
+  font-size: 16px;
 }
 .page-sidebar .page-sidebar-wrapper > ul > li.open > a {
   background-color: #0aa699 !important;
@@ -1683,15 +1683,14 @@ textarea.error,
 .select2-results {
   margin: 4px 4px 4px 0;
 }
-@media (max-width: 1024px) {
-  #main-menu-toggle-wrapper,
-  #portrait-chat-toggler {
-    display: block !important;
-  }
-}
 #breadcrumb-region {
   display: none;
 }
+#main-content-region > .row,
+#content-display-region > .row {
+  margin: 0;
+}
+/*Theme Modifications*/
 body {
   font-size: 18px;
   font-weight: bold;
@@ -1709,6 +1708,14 @@ button,
 select,
 textarea {
   font-size: 16px;
+}
+.small-text {
+  font-size: 15px !important;
+}
+.label {
+  font-size: 13px;
+  display: inline-block;
+  padding: 6px 9px;
 }
 .btn {
   padding: 10px 30px;
@@ -1756,17 +1763,19 @@ select:before {
   bottom: 10px;
   border-left: 1px solid #e5e5e5;
 }
-#main-content-region > .row,
-#content-display-region > .row {
-  margin: 0;
-}
-.small-text {
-  font-size: 15px !important;
-}
 @media (max-width: 1024px) {
+  #main-menu-toggle-wrapper,
+  #portrait-chat-toggler {
+    display: block !important;
+  }
   .page-content .content {
     padding: 0;
     padding-top: 60px;
+  }
+  .page-title,
+  #Filters {
+    padding: 0 8px;
+    margin-bottom: 0;
   }
   .header .notifcation-center {
     background: transparent;
