--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
@@ -1,6 +1,6 @@
 <div class="col-md-3">
 </div>
-<div class="col-md-6">
+<div class="col-md-6 m-t-20">
 
     <ul class="nav nav-tabs" id="teacherOptns">
         <li class="active"><a href="#takeClass">Take a Class</a></li>
