--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -219,8 +219,8 @@ textarea.error, .select2-choice.error {
 
 .smallLogo{
 	//background: url('../img/logo-synapse.png');
-	background: url(../../../images/logo-synapse.png);
-	width: 35px;
+	background: url(../../../images/synapse-logo-main.png);
+	width: 97px;
 	height: 35px;
 	margin: 0 auto;
 	background-size: 100%;
