resolved question is marked as not completed if no student selected issue

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -44,6 +44,6 @@
 
 
 <div id="walnutProfile">
-    <div id="app_username" class="user">User Name</div>
+    <div id="app_username" class="user">{{show_user_name}}</div>
     <a id="logout" class="appLogout" href="javascript://" ><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a>
 </div>
