--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync1.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync1.html
@@ -4,6 +4,7 @@
 
                     <div class="row">
                       <div class="col-sm-6 b-grey b-r ">
+                      <a href="#teachers/dashboard" style="height:20px"> teachers dashboard</a>
                         <h3 class="semi-bold text-center">Sync Download <span class="fa fa-download"></span></h3>
                         <div class="row">
                           <div class="col-sm-6 b-grey b-r">
