edit content piece hidden on device + misc changes

--- a/HTML/assets/less/chapters.less
+++ b/HTML/assets/less/chapters.less
@@ -1,7 +1,11 @@
 .listBox{
 	margin-top: 60px;
 }
-
+@media(min-width:992px) and (max-width:1024px){
+	.listBox{
+		margin-top: 50px;
+	}
+}
 @media(max-width:991px){
 	.listBox{
 		margin-top: 0;
