--- a/HTML/assets/less/mixins.less
+++ b/HTML/assets/less/mixins.less
@@ -555,6 +555,12 @@
   display: block;
 }
 
+.nonDevice{
+  @media(max-width:1024px){
+    display: none;
+  }
+}
+
 .overlap-left-15{
   position: absolute;
   left: -15px;
