--- a/HTML/assets/less/modules/misc.less
+++ b/HTML/assets/less/modules/misc.less
@@ -4,7 +4,7 @@ span {
     }
 }
 .iconset {
-    background: url('../img/icon/top-tray.png') no-repeat;
+    background: url('../../../images/icon/top-tray.png') no-repeat;
     position: relative;
     top: 1px;
     &.top-home {
