--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -59,8 +59,12 @@ body{
 			color: @color-white !important;
 			font-size: 16px;
 		}
+		&>a, &>a:hover{
+			padding: 11.5px 16px;
+		}
 		&.open > a{
 			background-color: @color-primary !important;
+			padding: 11.5px 16px;
 		}
 	}
 
