--- a/HTML/assets/less/modules/layout.less
+++ b/HTML/assets/less/modules/layout.less
@@ -461,7 +461,7 @@ body {
                             display: block;
                             width: 8px;
                             height: 25px;
-                            background-image: url("../img/sidebar-menu-arrow.png");
+                            background-image: url("../../../images/sidebar-menu-arrow.png");
                             float: right;
                             position: absolute;
                             right: -8px;
@@ -977,7 +977,7 @@ body {
     line-height: 16px;
 }
 .scrollup {
-    background: url('../img/pullup.png') no-repeat;
+    background: url('../../../images/pullup.png') no-repeat;
     background-position: 0px 0px;
     width: 27px;
     height: 27px;
@@ -1497,7 +1497,7 @@ body {
     text-decoration: none;
 }
 .status-icon {
-    background: url('../img/icon/status.png') no-repeat;
+    background: url('../../../images/icon/status.png') no-repeat;
     position: relative;
     display: inline-block;
     margin-right: 10px;
