--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -209,13 +209,13 @@ textarea.error, .select2-choice.error {
 }
 
 .mainLogo{
-	//background: url(../../../images/logo-synapse.png);
+	//background: url(../../../images/synapse-logo-main.png);
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
 	img{
-		width: 85px;
-		height: 85px;
+		width: 210px;
+		height: 76px;
 		margin: 0 auto 15px;
 		display: block;
 	}
