color change as per logo

--- a/HTML/assets/css/style.css
+++ b/HTML/assets/css/style.css
@@ -437,7 +437,7 @@ body {
   width: 45px;
   position: absolute;
   height: 100%;
-  background-color: #0aa699 !important;
+  background-color: #e74c30 !important;
 }
 .page-sidebar .inner-menu {
   display: inline-block;
@@ -615,7 +615,7 @@ body {
 .page-sidebar.mini {
   width: 50px;
   overflow: visible !important;
-  background-color: #0aa699 !important;
+  background-color: #e74c30 !important;
   height: 100%;
   margin-top: 0;
   position: absolute;
@@ -730,7 +730,7 @@ body {
 }
 .page-sidebar.mini .page-sidebar-wrapper > ul > li > a:hover,
 .page-sidebar.mini .page-sidebar-wrapper > ul > li:hover > a {
-  background: #009588;
+  background: #d63b1f;
 }
 .page-sidebar.mini .page-sidebar-wrapper > ul > li.active > a i,
 .page-sidebar .page-sidebar-wrapper > ul > li:hover > a i {
@@ -1025,13 +1025,13 @@ body {
   margin-right: 12px;
 }
 .chat-messages-header .status.online {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .chat-messages-header .status.busy {
   background-color: #f35958;
 }
 .chat-messages-header .status.away {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .chat-messages-header a > i {
   color: #4c5264;
@@ -1710,7 +1710,7 @@ blockquote.pull-right small:after {
   background-color: #fdd01c !important;
 }
 .bg-green {
-  background-color: #0aa699 !important;
+  background-color: #e74c30 !important;
 }
 .bg-purple {
   color: #852b99 !important;
@@ -1731,7 +1731,7 @@ blockquote.pull-right small:after {
   color: #8b91a0 !important;
 }
 .text-success {
-  color: #0aa699 !important;
+  color: #e74c30 !important;
 }
 .text-info {
   color: #0090d9 !important;
@@ -1764,7 +1764,7 @@ blockquote.pull-right small:after {
   margin-bottom: 8px;
 }
 .color-bands.green {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .color-bands.purple {
   background-color: #852b99;
@@ -1870,7 +1870,7 @@ hr {
   width: auto;
 }
 .well.green {
-  background-color: #0aa699;
+  background-color: #e74c30;
   color: #ffffff;
   border: none;
 }
@@ -2947,18 +2947,18 @@ textarea[class*="span"] {
   opacity: 0.65;
 }
 .radio.radio-success label:after {
-  background-color: #0aa699;
-  border: 1px solid #0aa699;
+  background-color: #e74c30;
+  border: 1px solid #e74c30;
 }
 .radio.radio-success input[type=radio]:checked + label:before {
-  border: 1px solid #0aa699;
+  border: 1px solid #e74c30;
 }
 .radio.radio-primary label:after {
-  background-color: #0aa699;
-  border: 1px solid #0aa699;
+  background-color: #e74c30;
+  border: 1px solid #e74c30;
 }
 .radio.radio-primary input[type=radio]:checked + label:before {
-  border: 1px solid #0aa699;
+  border: 1px solid #e74c30;
 }
 .radio.radio-info label:after {
   background-color: #0090d9;
@@ -3069,15 +3069,15 @@ textarea[class*="span"] {
   background-color: #eceff3;
 }
 .checkbox.check-success input[type=checkbox]:checked + label:before {
-  background-color: #0aa699;
-  border: 1px solid #0aa699;
+  background-color: #e74c30;
+  border: 1px solid #e74c30;
 }
 .checkbox.check-success input[type=checkbox]:checked + label::after {
   color: #ffffff;
 }
 .checkbox.check-primary input[type=checkbox]:checked + label:before {
-  background-color: #0aa699;
-  border: 1px solid #0aa699;
+  background-color: #e74c30;
+  border: 1px solid #e74c30;
 }
 .checkbox.check-primary input[type=checkbox]:checked + label::after {
   color: #ffffff;
@@ -3372,7 +3372,7 @@ form legend,
   width: 50%;
 }
 .wizard-steps li.complete .step {
-  background-color: #0aa699;
+  background-color: #e74c30;
   padding: 1px 6px;
   border: 4px solid #55606e;
 }
@@ -3496,11 +3496,11 @@ form legend,
 }
 .slide-primary .ios-switch .on-background {
   background-image: none;
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .slide-success .ios-switch .on-background {
   background-image: none;
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .select2-container .select2-choice {
   background-image: none;
@@ -3725,10 +3725,10 @@ form legend,
   content: "\f0d9 ";
 }
 .input-append.primary .add-on .arrow {
-  color: #0aa699;
+  color: #e74c30;
 }
 .input-append.success .add-on .arrow {
-  color: #007366;
+  color: #b41900;
 }
 .input-append.info .add-on .arrow {
   color: #005da6;
@@ -3757,12 +3757,12 @@ form legend,
 }
 .input-append.primary .add-on,
 .input-prepend .add-on {
-  background-color: #0aa699;
+  background-color: #e74c30;
   color: #ffffff;
 }
 .input-append.success .add-on,
 .input-prepend .add-on {
-  background-color: #007366;
+  background-color: #b41900;
   color: #ffffff;
   display: inline-block;
   float: left;
@@ -3839,12 +3839,12 @@ form legend,
   top: 1px;
 }
 .input-group-addon.primary {
-  background-color: #0aa699;
-  border: 1px solid #0aa699;
+  background-color: #e74c30;
+  border: 1px solid #e74c30;
   color: #ffffff;
 }
 .input-group-addon.primary .arrow {
-  color: #0aa699;
+  color: #e74c30;
 }
 .input-group-addon.success {
   background-color: #0090d9;
@@ -4058,10 +4058,10 @@ form legend,
   color: #f35958;
 }
 .success-control input {
-  border: 1px solid #0aa699;
+  border: 1px solid #e74c30;
 }
 .success-control i {
-  color: #0aa699;
+  color: #e74c30;
 }
 .grid {
   clear: both;
@@ -4122,11 +4122,11 @@ form legend,
   background-color: #ffb848;
 }
 .grid.box.green {
-  border: 1px solid #0aa699;
+  border: 1px solid #e74c30;
   border-top: 0;
 }
 .grid.box.green .grid-title {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .grid.box.purple {
   border: 1px solid #af5cc1;
@@ -4245,7 +4245,7 @@ form legend,
   margin-bottom: 18px;
 }
 .grid.simple.vertical.green {
-  border-left: 4px solid #0aa699;
+  border-left: 4px solid #e74c30;
   border-top: none !important;
 }
 .grid.simple.vertical.red {
@@ -4267,7 +4267,7 @@ form legend,
   border-top: 4px solid #ffb848;
 }
 .grid.simple.horizontal.green .grid-title {
-  border-top: 4px solid #0aa699;
+  border-top: 4px solid #e74c30;
 }
 .grid.simple.horizontal.purple .grid-title {
   border-top: 4px solid #852b99;
@@ -4409,7 +4409,7 @@ form legend,
 }
 .grid-body.green,
 .grid.green {
-  background-color: #0aa699 !important;
+  background-color: #e74c30 !important;
 }
 .grid-body.purple,
 .grid.purple {
@@ -4730,7 +4730,7 @@ form legend,
   background-color: #0090d9;
 }
 .tiles.green {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .tiles.black {
   background-color: #22262e;
@@ -4817,7 +4817,7 @@ form legend,
   padding: 19px 18px 17px 24px;
 }
 .tiles-chart .tiles-body .heading {
-  color: #0aa699;
+  color: #e74c30;
 }
 .tiles-chart .controller {
   position: absolute;
@@ -4834,7 +4834,7 @@ form legend,
   height: auto;
 }
 .tiles-overlay.green {
-  background-color: #0aa699;
+  background-color: #e74c30;
   opacity: 0.8;
   filter: alpha(opacity=80);
 }
@@ -4965,7 +4965,7 @@ form legend,
   color: #ffffff;
 }
 .widget .widget-title.green {
-  background-color: #0aa699;
+  background-color: #e74c30;
   color: #ffffff;
 }
 .widget .widget-title.purple {
@@ -5149,7 +5149,7 @@ form legend,
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -5157,11 +5157,11 @@ form legend,
 .btn-primary.active,
 .btn-primary.disabled,
 .btn-primary[disabled] {
-  background-color: #007366;
+  background-color: #b41900;
 }
 .btn-success {
   color: #ffffff;
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .btn-success:hover,
 .btn-success:focus,
@@ -5169,7 +5169,7 @@ form legend,
 .btn-success.active,
 .btn-success.disabled,
 .btn-success[disabled] {
-  background-color: #007366;
+  background-color: #b41900;
 }
 .btn-info {
   color: #ffffff;
@@ -5209,7 +5209,7 @@ form legend,
 }
 .btn-danger-dark {
   color: #ffffff;
-  background-color: #009588;
+  background-color: #d63b1f;
 }
 .btn-danger-dark:hover,
 .btn-danger-dark:focus,
@@ -5217,7 +5217,7 @@ form legend,
 .btn-danger-dark.active,
 .btn-danger-dark.disabled,
 .btn-danger-dark[disabled] {
-  background-color: #007366;
+  background-color: #b41900;
   color: #ffffff;
 }
 .btn-dark {
@@ -5288,7 +5288,7 @@ form legend,
   background-color: #e6e6e6;
 }
 .btn-group.open .btn-primary.dropdown-toggle {
-  background-color: #008477;
+  background-color: #c52a0e;
 }
 .btn-group.open .btn-warning.dropdown-toggle {
   background-color: #dbae00;
@@ -5297,7 +5297,7 @@ form legend,
   background-color: #d13736;
 }
 .btn-group.open .btn-success.dropdown-toggle {
-  background-color: #008477;
+  background-color: #c52a0e;
 }
 .btn-group.open .btn-info.dropdown-toggle {
   background-color: #006eb7;
@@ -5442,7 +5442,7 @@ code:hover {
   color: #832929;
 }
 .single-colored-widget .content-wrapper.green {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .single-colored-widget .content-wrapper.green p {
   color: #505458;
@@ -5790,11 +5790,11 @@ code:hover {
   margin: 5px 0px;
 }
 .slider.primary .slider-track {
-  background: #0aa699;
+  background: #e74c30;
   background-image: none;
 }
 .slider.sucess .slider-track {
-  background: #0aa699;
+  background: #e74c30;
   background-image: none;
 }
 .slider.info .slider-track {
@@ -5867,7 +5867,7 @@ code:hover {
 }
 .green .slider-selection {
   background-image: none !important;
-  background-color: #007366 !important;
+  background-color: #b41900 !important;
   cursor: point2;
 }
 .alert {
@@ -5973,48 +5973,48 @@ code:hover {
   opacity: 1;
 }
 .alert-success {
-  color: #007366;
+  color: #b41900;
   background-color: #f3faf8;
-  border-color: #009588;
+  border-color: #d63b1f;
 }
 .alert-success::selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success::-moz-selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .link {
-  color: #007366;
+  color: #b41900;
 }
 .alert-success .link::selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .link::-moz-selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .alert-heading {
-  color: #006255 !important;
+  color: #a30800 !important;
 }
 .alert-success .alert-heading::selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .alert-heading::-moz-selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
@@ -6023,13 +6023,13 @@ code:hover {
   background-position: -38px -10px !important;
 }
 .alert-success .close::selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
 }
 .alert-success .close::-moz-selection {
-  background: #0aa699;
+  background: #e74c30;
   /* Safari */
 
   color: #ffffff;
@@ -6308,7 +6308,7 @@ code:hover {
   transition-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 .progress-bar-success {
-  background-color: #0aa699;
+  background-color: #e74c30;
   background-image: none;
 }
 .progress-bar-info {
@@ -6353,7 +6353,7 @@ code:hover {
 }
 .progress-success.progress-striped .bar,
 .progress-striped .bar-success {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .progress-info.progress-striped .bar,
 .progress-striped .bar-info {
@@ -6391,7 +6391,7 @@ code:hover {
 }
 .label-success,
 .badge-success {
-  background-color: #0aa699;
+  background-color: #e74c30;
   color: #ffffff;
 }
 .label-warning,
@@ -6846,7 +6846,7 @@ input[type="checkbox"] {
   background-color: #c5c8cb;
 }
 .user-status.available {
-  background-color: #0aa699;
+  background-color: #e74c30;
 }
 .user-status:before {
   width: 5px;
@@ -7337,13 +7337,13 @@ input[type="checkbox"] {
   font-size: 1.3em;
 }
 .cbp_tmtimeline > li .cbp_tmicon.success {
-  background: #1bb7aa;
-  box-shadow: 0 0 0 8px #2cc8bb;
+  background: #f85d41;
+  box-shadow: 0 0 0 8px #ff6e52;
   color: #ffffff;
 }
 .cbp_tmtimeline > li .cbp_tmicon.primary {
-  background: #1bb7aa;
-  box-shadow: 0 0 0 8px #2cc8bb;
+  background: #f85d41;
+  box-shadow: 0 0 0 8px #ff6e52;
   color: #ffffff;
 }
 .cbp_tmtimeline > li .cbp_tmicon.warning {
