--- a/HTML/assets/less/modules/typo.less
+++ b/HTML/assets/less/modules/typo.less
@@ -9,7 +9,7 @@
 .notification-alert {
     width: 29px;
     height: 29px;
-    background-image: url("../img/notification-alert.png");
+    background-image: url("../../../images/notification-alert.png");
     position: absolute;
     float: right;
     right: -15px;
