Fixed app schedule date. Changes synapse logo and splash screens. Added fast click js to avoid 300ms click delay.

--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -1,10 +1,10 @@
-<div class="col-md-12">
+<div class="col-md-12 m-t-25">
           <div class="tiles white">
                   <div class="tiles-body">
 
                     <div class="row">
 
-                      <div class="col-sm-5 b-grey b-r">
+                      <div class="col-sm-12">
                         <h3 class="semi-bold text-center">Sync</h3>
 
                         <div class="row">
@@ -16,7 +16,7 @@
                         </div>
 
                         <div class="row">
-                          <div class="col-sm-12  m-b-10">
+                          <div class="col-sm-12  m-b-10 m-t-10">
                             <div class="">
                               <button id="syncStartContinue" type="button" class="btn btn-success h-center block"><span id="syncButtonText" class="bold">Start</span></button>
                               
