--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
@@ -13,12 +13,12 @@
           <div class="m-b-15 semi-bold row">
 				<div class="col-md-6">
 					<label class="form-label bold">Class</label>
-					<select id="class" class="form-control" >
+					<select id="class">
 			        </select>
 			    </div>
 			    <div class="col-md-6">
 			        <label class="form-label bold">Div</label>
-					<select id="div" class="form-control" >
+					<select id="div">
 			        </select>
 			    </div>
 		    </div>
