success color reverted to green

--- a/HTML/assets/less/variables.less
+++ b/HTML/assets/less/variables.less
@@ -38,7 +38,7 @@
 @color-primary-hover: @color-primary - #111;
 @font-color-primary: @color-white;
 
-@color-success: #e74c30;
+@color-success: #0aa699;
 @color-success-mask: #f3faf8;
 @font-color-success: @color-white;
 
