--- a/HTML/assets/less/modules/form_elements.less
+++ b/HTML/assets/less/modules/form_elements.less
@@ -213,9 +213,9 @@ textarea[class*="span"] {
 .xsmall {
     width: 50px !important;
 }
-.small {
-    width: 120px !important;
-}
+// .small {
+//     width: 120px !important;
+// }
 .medium {
     width: 206px !important;
 }
