--- a/HTML/assets/less/modules/tiles.less
+++ b/HTML/assets/less/modules/tiles.less
@@ -36,7 +36,7 @@
         float: right;
         a {
             position: relative;
-            background: url('../img/icon/portlet-tray.png') no-repeat;
+            background: url('../../../images/icon/portlet-tray.png') no-repeat;
             transition: all 0.1s linear 0s;
             display: inline-block;
             &.remove {
@@ -266,7 +266,7 @@
         background-color: #0090d9;
     }
     &.green {
-        background-color: @color-green;
+        background-color: @color-success;
     }
     &.black {
         background-color: #22262e;
@@ -401,7 +401,7 @@
         }
         a {
             position: relative;
-            background: url('../img/icon/portlet-tray.png') no-repeat;
+            background: url('../../../images/icon/portlet-tray.png') no-repeat;
             transition: all 0.1s linear 0s;
             display: inline-block;
             &.remove {
@@ -539,7 +539,7 @@
         margin-right: 8px;
         a {
             position: relative;
-            background: url('../img/icon/portlet-tray.png') no-repeat;
+            background: url('../../..images/icon/portlet-tray.png') no-repeat;
             transition: all 0.1s linear 0s;
             display: inline-block;
             &.remove {
