--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
@@ -1,9 +1,9 @@
 <div class="grid-title no-border">
     <h4 class="">{{name}}</h4>
 
-    <div class="tools">
+    <!-- <div class="tools">
         <a href="javascript:;" class="collapse"></a>
-    </div>
+    </div> -->
 </div>
 <div class="grid-body no-border" style="overflow: hidden; display: block;">
     <div class="row ">
@@ -58,7 +58,7 @@
 
 {{#takeClassModule}}
 <div class="tiles grey text-grey p-t-10 p-l-15 p-r-10 p-b-10 b-grey b-b">
-    <div class="row p-r-10">
+    <div class="row no-margin p-r-10">
         <div class="col-sm-4">
 
             <div class="tiles added-margin">
@@ -85,7 +85,7 @@
 
         </div>
     </div>
-    <div class="row">
+    <div class="row no-margin p-t-10">
         <div class="col-sm-6">
             <div class="modProgress">
                 <p class="bold small-text m-t-10 m-b-5">Progress</p>
