--- a/HTML/assets/less/modules/buttons.less
+++ b/HTML/assets/less/modules/buttons.less
@@ -1,7 +1,9 @@
 .btn {
     display: inline-block;
-    padding: 9px 12px;
-    padding-top: 7px;
+    // padding: 9px 12px;
+    // padding-top: 7px;
+    padding: 10px 18px;
+    padding-top: 10px;
     margin-bottom: 0;
     font-size: 14px;
     line-height: 20px;
@@ -127,8 +129,10 @@
     margin-top: 4px;
 }
 .btn-small {
-    padding: 3px 12px;
-    font-size: 11.9px;
+    // padding: 3px 12px;
+    padding: 8px 12px;
+    // font-size: 11.9px;
+    font-size: 13px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
