--- a/HTML/assets/less/modules/portlets.less
+++ b/HTML/assets/less/modules/portlets.less
@@ -31,7 +31,7 @@
             .tools {
                 margin-top: 3px;
                 a {
-                    background: url(../img/icon/portlet-tray.png) no-repeat;
+                    background: url(../../../images/icon/portlet-tray.png) no-repeat;
                     width: 23px;
                     height: 23px;
                 }
@@ -264,8 +264,10 @@
     border-bottom: 1px solid #eee;
     h4 {
         display: inline-block;
-        font-size: 16px;
-        font-weight: 400;
+        // font-size: 16px;
+        // font-weight: 400;
+        font-size: 20px;
+        font-weight: 600;
         margin: 0;
         padding: 0;
         margin-bottom: 7px;
@@ -430,7 +432,7 @@
 }
 .grid.simple .grid-title .tools a,.grid.solid .grid-title .tools a {
     position: relative;
-    background: url('../img/icon/portlet-tray.png') no-repeat;
+    background: url('../../../images/icon/portlet-tray.png') no-repeat;
     transition: all 0.1s linear 0s;
 }
 .grid.simple .grid-title .tools > a.remove, 
