--- a/HTML/assets/less/modules/tabs_accordians.less
+++ b/HTML/assets/less/modules/tabs_accordians.less
@@ -103,7 +103,7 @@
         top: 10px;
         a {
             position: relative;
-            background: url('../img/icon/portlet-tray.png') no-repeat;
+            background: url('../../../images/icon/portlet-tray.png') no-repeat;
             transition: all 0.1s linear 0s;
         }
     }
