--- a/wp-content/themes/walnut/walnut/dev/css/pace.coinspin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/pace.coinspin.css
@@ -32,7 +32,7 @@
   width: 145px;
   height: 140px;
   border-radius: 70px;
-  background: #29d;
+  background: #e74c30;
   position: absolute;
   top: 0;
   z-index: 1911;
