color change, missing icon fix

--- a/HTML/assets/less/modules/tiles.less
+++ b/HTML/assets/less/modules/tiles.less
@@ -268,6 +268,9 @@
     &.green {
         background-color: @color-success;
     }
+    &.default {
+        background-color: @color-primary;
+    }
     &.black {
         background-color: #22262e;
         .blend {
