--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/element-box/templates/toolbox.html
@@ -1,4 +1,4 @@
-<div class="tiles green">
+<div class="tiles default">
     <div class="tiles-head">
         <h4 class="text-white">
             <span class="semi-bold">Tool</span>box
